AI-JADEDEVS4/src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Indirect Sales</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Active</fullName>
        </values>
        <values>
            <fullName>Inactive</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Nurturing</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Partner</fullName>
        </values>
        <values>
            <fullName>Potential Partner</fullName>
        </values>
        <values>
            <fullName>Pursuing</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Re-Open</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
        <values>
            <fullName>Webinar - Partner</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>MAL</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Active</fullName>
        </values>
        <values>
            <fullName>Inactive</fullName>
        </values>
        <values>
            <fullName>Nurturing</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Partner</fullName>
        </values>
        <values>
            <fullName>Potential Partner</fullName>
        </values>
        <values>
            <fullName>Pursuing</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Raw</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Re-Open</fullName>
        </values>
        <values>
            <fullName>Rejected</fullName>
        </values>
        <values>
            <fullName>Webinar - Partner</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>MQL</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Pursuing</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Rejected</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>SAL</fullName>
        <description>Sales Accepted Lead</description>
        <isActive>true</isActive>
        <values>
            <fullName>Follow Up</fullName>
        </values>
        <values>
            <fullName>Pursuing</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
        <values>
            <fullName>Unresponsive</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>ARCHIVE_First_Created_Date__c</fullName>
        <description>Archive field that represents original create date prior to DaVinci migration.</description>
        <inlineHelpText>Archived Create Date of lead</inlineHelpText>
        <label>CreatedDate (Archive)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Adaptive_Industry__c</fullName>
        <label>Adaptive Industry</label>
        <picklist>
            <picklistValues>
                <fullName>Aerospace &amp; Defense</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agriculture, Forestry, Fishing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banking, Financial Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business, Professional, &amp; Technical Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction, Architecture &amp; Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy &amp; Utilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare &amp; Social Assistance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospitality, Gaming, Hotel, Restaurants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mining, Oil &amp; Gas Extraction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nonprofits, Charities, Foundations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharmaceuticals, Biotech, Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Publishing, Media, Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Estate, Leasing &amp; Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation &amp; Shipping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waste Management, Recycling, Environment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wholesale</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Alternate_Email__c</fullName>
        <label>Alternate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Attended__c</fullName>
        <description>Denotes either they attended an event (webinar etc.)</description>
        <label>Attended</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <label>Budgeted Project</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requires Justification</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Budgeted_Project__c</fullName>
        <inlineHelpText>Is the project budgeted?</inlineHelpText>
        <label>Budgeted Project</label>
        <picklist>
            <picklistValues>
                <fullName>Needs Justification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Development__c</fullName>
        <label>Business Development</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>By_Pass_Assignment_Rule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>By Pass Assignment Rule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPE_Credit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CPE Credit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Other__c</fullName>
        <inlineHelpText>Add any CRM system not on main list.</inlineHelpText>
        <label>Other CRM</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_System__c</fullName>
        <globalPicklist>CRM_New</globalPicklist>
        <inlineHelpText>Choice the prospects current CRM system, can select several.</inlineHelpText>
        <label>CRM</label>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Campaign_Last_Associated_Age__c</fullName>
        <formula>IF(ISNULL( Campaign_Last_Associated_date__c ),&apos;&apos;,TEXT(FLOOR(TODAY() - Campaign_Last_Associated_date__c ))+&apos; Days&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Last Associated Age</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Last_Associated_date__c</fullName>
        <label>Campaign Last Associated date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Capital_Planning_Needs__c</fullName>
        <label>Capital Planning Needs?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cash_Flow_Balance_Sheet__c</fullName>
        <label>Cash Flow/Balance Sheet?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChristianLeeId__c</fullName>
        <description>For Christian ONLY.  This is for his reporting purposes</description>
        <inlineHelpText>For Christian ONLY.  This is for his reporting purposes</inlineHelpText>
        <label>ChristianLeeId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Description__c</fullName>
        <label>Partner Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Company_Phone__c</fullName>
        <label>Company Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Compelling_Requirement_for_Change__c</fullName>
        <description>Description on why the lead wants to move away from their current environment</description>
        <label>Reason for change</label>
        <picklist>
            <picklistValues>
                <fullName>CXO sponsored initiative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing NetSuite Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Improve collaboration in process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Improve quality of information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Improve reporting and analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Many users to manage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need to forecast more frequently</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New NetSuite Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not scalable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Process taking too long</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Too many spreadsheets to manage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Version management</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Competition__c</fullName>
        <label>Competition</label>
        <picklist>
            <picklistValues>
                <fullName>Host Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle Hyperion Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle PBCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prophix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budget Maestro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBM Cognos TM1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anaplan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solver BI360</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAP BPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tagetik</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vena Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A3 Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active Planner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argus Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Axiom EPM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blackbaud ABM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t Know</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ERP Module</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FISERV Vantage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBM Cognos Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INFOR CPM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jedox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KCI Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Longview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsoft Forecaster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsoft FRx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsoft Management Reporter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsoft Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Consolidation_Needs__c</fullName>
        <label>Consolidation</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Consulting__c</fullName>
        <label>Consulting</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Dials__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Current Dials</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_International_Dials__c</fullName>
        <label>Current International Dials</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DUNS_Number__c</fullName>
        <label>DUNS Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dashboard__c</fullName>
        <label>Dashboard</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Data_com_Enriched__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Data.com Enriched</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Direct_Phone__c</fullName>
        <description>Direct phone number</description>
        <inlineHelpText>Direct phone number, if different than main phone number</inlineHelpText>
        <label>Direct Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Do_Not_Sync_With_Eloqua__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked this lead will not sync with Eloqua database</inlineHelpText>
        <label>Do Not Sync With Eloqua</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eloqua_Create_Date__c</fullName>
        <label>Eloqua Create Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Eloqua_Lead_Score__c</fullName>
        <description>This field used for Eloqua score &amp; its alpha numeric value( Example : A1,B1,C2)</description>
        <inlineHelpText>This field used for Eloqua score &amp; its alpha numeric value( Example : A1,B1,C2)</inlineHelpText>
        <label>Eloqua Lead Score</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eloqua_Partner__c</fullName>
        <description>This field mapped from partner prospect referral form registration</description>
        <inlineHelpText>This field mapped from partner prospect referral form registration</inlineHelpText>
        <label>Eloqua Partner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Bounced_Date__c</fullName>
        <inlineHelpText>Instead of storing the bounce record in Activity (we passed 30k records), I&apos;m storing it in this field instead to give us storage room.</inlineHelpText>
        <label>Email Bounced Date</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Contains__c</fullName>
        <formula>CONTAINS(Email,&quot;.edu&quot;) &amp;&amp; (Country = &apos;United States&apos; || Country = &apos;US&apos; )</formula>
        <label>Higher Ed Email Contains</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enriched_After_HubSpot__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enriched After HubSpot</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enterprise_Trial_Info__c</fullName>
        <inlineHelpText>Login Info</inlineHelpText>
        <label>Enterprise Trial Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enterprise_Trial__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>requested for the Enterprise Trial on our website and or doing custome Trial from other means (like from pre-sales)</inlineHelpText>
        <label>Enterprise Trial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expense_Planning_Needs__c</fullName>
        <label>Expense Planning</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>First_Created_Date__c</fullName>
        <label>First Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year_End__c</fullName>
        <label>Fiscal Year End</label>
        <picklist>
            <picklistValues>
                <fullName>Jan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jun</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jul</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nov</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dec</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Forecasting_Needs__c</fullName>
        <label>Forecasting</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Founded__c</fullName>
        <label>Founded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GA_Adwords_ID__c</fullName>
        <description>Google Adwords</description>
        <inlineHelpText>Used by Marketing</inlineHelpText>
        <label>GA Adwords ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GA_Campaign_Content__c</fullName>
        <description>Google Adwords</description>
        <inlineHelpText>Used by Marketing</inlineHelpText>
        <label>GA Campaign Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GA_Campaign_Keyword__c</fullName>
        <description>Google Adwords</description>
        <inlineHelpText>Used by Marketing</inlineHelpText>
        <label>GA Campaign Keyword</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GA_Campaign_Medium__c</fullName>
        <description>Google Adwords</description>
        <inlineHelpText>Used by Marketing</inlineHelpText>
        <label>GA Campaign Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GA_Campaign_Name__c</fullName>
        <description>Google Adwords</description>
        <inlineHelpText>Used by Marketing</inlineHelpText>
        <label>GA Campaign Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GA_Landing_Page__c</fullName>
        <description>Google Adwords</description>
        <inlineHelpText>Used by Marketing</inlineHelpText>
        <label>GA Landing Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GA_Source__c</fullName>
        <description>Google Adwords</description>
        <inlineHelpText>Used by marketing</inlineHelpText>
        <label>GA Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>General_Ledger_Other__c</fullName>
        <label>Other ERP</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>General_Ledger__c</fullName>
        <globalPicklist>ERP_Global</globalPicklist>
        <inlineHelpText>Prospects GL, can select several.</inlineHelpText>
        <label>ERP</label>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Global_Lifecycle_Stage__c</fullName>
        <description>Marketing Accepted and Qualified Lead (MAL/MQL)
Sales Accepted and Qualified Lead (SAL/SQL)</description>
        <globalPicklist>Global_Lifecycle_Stage</globalPicklist>
        <inlineHelpText>Marketing Accepted and Qualified Lead (MAL/MQL)
Sales Accepted and Qualified Lead (SAL/SQL)</inlineHelpText>
        <label>Lifecycle Stage</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Global_Ultimate_DUNs_Number__c</fullName>
        <description>The global company&apos;s DUNs Number</description>
        <inlineHelpText>The global company&apos;s DUNs Number</inlineHelpText>
        <label>Global Ultimate DUNs Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HQ_Annual_Revenue_Range__c</fullName>
        <formula>if(HQ_Annual_Revenue__c &gt; 1000000000, &quot;9$ 1B+&quot;,
if( and(HQ_Annual_Revenue__c &lt;= 1000000000 , HQ_Annual_Revenue__c &gt;= 500000000), &quot;8$ 500M - 1B&quot;,
if( and(HQ_Annual_Revenue__c &lt;= 499999999 , HQ_Annual_Revenue__c &gt;= 200000000), &quot;7$ 200M - 499M&quot;,
if( and(HQ_Annual_Revenue__c &lt;= 199999999 , HQ_Annual_Revenue__c &gt;= 100000000), &quot;6$ 100M - 199M&quot;,
if( and(HQ_Annual_Revenue__c &lt;= 99999999 , HQ_Annual_Revenue__c &gt;= 50000000), &quot;5$ 50M - 99M&quot;,
if( and(HQ_Annual_Revenue__c &lt;= 49999999 , HQ_Annual_Revenue__c &gt;= 25000000), &quot;4$ 25M - 49M&quot;,
if( and(HQ_Annual_Revenue__c &lt;= 24999999 , HQ_Annual_Revenue__c &gt;= 10000000), &quot;3$ 10M - 24M&quot;,
if( and(HQ_Annual_Revenue__c &lt;= 9999999 , HQ_Annual_Revenue__c &gt;= 1000000), &quot;2$ 1M - 9M&quot;,
if( and(HQ_Annual_Revenue__c &lt; 1000000 , HQ_Annual_Revenue__c &gt; 0), &quot;1$ &lt;1M&quot;, &quot;needs data&quot;
)
)
)
)
)
)
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HQ Annual Revenue (Range)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HQ_Annual_Revenue__c</fullName>
        <description>HQ revenue or revenue of the parent company.</description>
        <label>HQ Annual Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HR_New__c</fullName>
        <globalPicklist>HR_Picklist</globalPicklist>
        <label>HR New</label>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>HR_System_Ot__c</fullName>
        <label>Other HR</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HR_System__c</fullName>
        <globalPicklist>HR_New</globalPicklist>
        <inlineHelpText>HR System</inlineHelpText>
        <label>HR</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Higher_Education__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Higher Education</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hot_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hot Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HubSpot_Lead_Score__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Lead Score from HubSpot</description>
        <inlineHelpText>Lead Score from HubSpot</inlineHelpText>
        <label>HubSpot Lead Score</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hubspot_Highest_Score__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Highest Lead Score from HubSpot</description>
        <inlineHelpText>Highest Lead Score from HubSpot</inlineHelpText>
        <label>Hubspot Highest Score</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ignore_All_Processing_Rules__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, all Lead assignment , territory, field update, and conversion rules are ignored.</inlineHelpText>
        <label>Ignore All Processing Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incumbent_Budgeting_Tool__c</fullName>
        <label>Incumbent Budgeting Tool</label>
        <picklist>
            <picklistValues>
                <fullName>3ESI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A3 Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acorn Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alight Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anaplan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Applix/TM1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argus Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Axiom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI360/Solver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blackbaud AMB (Powerplan)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budget Maestro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BudgetPak/XLerant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clarity Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPSI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FISERV/Vantage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FRX Forecaster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Host Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyperion Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyperion Pillar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBM - Applix/TM1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBM Clarity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBM Cognos Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inca</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INFOR CPM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jedox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KCI/Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Khalix Longview</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>